--- a/notes.html
+++ b/notes.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>notes.html</title></head><body><h1>Class 10 Notes</h1><p>All subject-wise notes will be added here.</p><br><a href='index.html'>Back to Home</a></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Notes</title>
+</head>
+<body>
+  <h1>Class 10 Notes</h1>
+  <ul>
+    <li>📘 Maths Notes</li>
+    <li>🔬 Science Notes</li>
+    <li>🌍 Social Science Notes</li>
+    <li>📖 English Notes</li>
+    <li>📝 Hindi Notes</li>
+  </ul>
+</body>
+</html><!DOCTYPE html><html><head><meta charset='UTF-8'><title>notes.html</title></head><body><h1>Class 10 Notes</h1><p>All subject-wise notes will be added here.</p><br><a href='index.html'>Back to Home</a></body></html>
