--- a/mcqs.html
+++ b/mcqs.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>mcqs.html</title></head><body><h1>MCQs</h1><p>Practice important MCQs chapter-wise here.</p><br><a href='index.html'>Back to Home</a></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>MCQs</title>
+</head>
+<body>
+  <h1>Class 10 MCQs</h1>
+  <ul>
+    <li>📘 Maths MCQs</li>
+    <li>🔬 Science MCQs</li>
+    <li>🌍 Social Science MCQs</li>
+    <li>📖 English MCQs</li>
+    <li>📝 Hindi MCQs</li>
+  </ul>
+</body>
+</html><!DOCTYPE html><html><head><meta charset='UTF-8'><title>mcqs.html</title></head><body><h1>MCQs</h1><p>Practice important MCQs chapter-wise here.</p><br><a href='index.html'>Back to Home</a></body></html>
