--- a/mcqs.html
+++ b/mcqs.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <h1>Class 10 MCQs</h1>
-  <ul>
-    <li>📘 Maths MCQs</li>
-    <li>🔬 Science MCQs</li>
-    <li>🌍 Social Science MCQs</li>
-    <li>📖 English MCQs</li>
-    <li>📝 Hindi MCQs</li>
-  </ul>
+<ul>
+  <li><a href="maths-notes.html">📘 Maths Notes</a></li>
+  <li><a href="science-notes.html">🔬 Science Notes</a></li>
+  <li><a href="sst-notes.html">🌍 Social Science Notes</a></li>
+  <li><a href="english-notes.html">📖 English Notes</a></li>
+  <li><a href="hindi-notes.html">📝 Hindi Notes</a></li>
+</ul>
 </body>
 </html><!DOCTYPE html><html><head><meta charset='UTF-8'><title>mcqs.html</title></head><body><h1>MCQs</h1><p>Practice important MCQs chapter-wise here.</p><br><a href='index.html'>Back to Home</a></body></html>
