--- a/notes.html
+++ b/notes.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <h1>Class 10 Notes</h1>
-  <ul>
-    <li>📘 Maths Notes</li>
-    <li>🔬 Science Notes</li>
-    <li>🌍 Social Science Notes</li>
-    <li>📖 English Notes</li>
-    <li>📝 Hindi Notes</li>
-  </ul>
+<ul>
+  <li><a href="maths-notes.html">📘 Maths Notes</a></li>
+  <li><a href="science-notes.html">🔬 Science Notes</a></li>
+  <li><a href="sst-notes.html">🌍 Social Science Notes</a></li>
+  <li><a href="english-notes.html">📖 English Notes</a></li>
+  <li><a href="hindi-notes.html">📝 Hindi Notes</a></li>
+</ul>
 </body>
 </html><!DOCTYPE html><html><head><meta charset='UTF-8'><title>notes.html</title></head><body><h1>Class 10 Notes</h1><p>All subject-wise notes will be added here.</p><br><a href='index.html'>Back to Home</a></body></html>
