--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       background: #34495e;
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
     }
     nav a {
       color: white;
@@ -47,6 +48,7 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       text-align: center;
       transition: 0.3s;
+      cursor: pointer;
     }
     .card:hover {
       transform: translateY(-5px);
@@ -58,7 +60,31 @@
       background: #ecf0f1;
       border-radius: 8px;
     }
+    .btn-group {
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .btn {
+      padding: 10px 20px;
+      background: #1abc9c;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #16a085;
+    }
   </style>
+  <script>
+    function showPage(pageId) {
+      let pages = document.querySelectorAll(".page");
+      pages.forEach(p => p.style.display = "none");
+      document.getElementById(pageId).style.display = "block";
+    }
+  </script>
 </head>
 <body>
 
@@ -72,6 +98,8 @@
     <a href="#history" onclick="showPage('history')">History</a>
     <a href="#science" onclick="showPage('science')">Science</a>
     <a href="#maths" onclick="showPage('maths')">Maths</a>
+    <a href="#english" onclick="showPage('english')">English</a>
+    <a href="#hindi" onclick="showPage('hindi')">Hindi</a>
   </nav>
 
   <div class="container">
@@ -92,6 +120,14 @@
           <h3>Maths</h3>
           <p>Examples & Practice</p>
         </div>
+        <div class="card" onclick="showPage('english')">
+          <h3>English</h3>
+          <p>Literature & Grammar</p>
+        </div>
+        <div class="card" onclick="showPage('hindi')">
+          <h3>Hindi</h3>
+          <p>कविता & गद्यांश</p>
+        </div>
       </div>
     </div>
 
@@ -104,6 +140,78 @@
         <li>The Salt March began in 1930 from Sabarmati to Dandi.</li>
         <li>Simon Commission (1927) faced boycott as no Indian member was included.</li>
       </ul>
-
       <h3>MCQs:</h3>
       <div class="mcq">Q1: Who led the Salt March in 1930?<br>👉 Mahatma Gandhi</div>
+      <div class="btn-group">
+        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
+        <a class="btn" onclick="showPage('science')">Next ➡</a>
+      </div>
+    </div>
+
+    <!-- Science Page -->
+    <div id="science" class="page" style="display:none">
+      <h2>Science - Important Formulas</h2>
+      <ul>
+        <li>Ohm’s Law: V = IR</li>
+        <li>Work = Force × Distance</li>
+        <li>Power = Work / Time</li>
+      </ul>
+      <h3>MCQs:</h3>
+      <div class="mcq">Q1: What is the SI unit of Force?<br>👉 Newton</div>
+      <div class="btn-group">
+        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
+        <a class="btn" onclick="showPage('maths')">Next ➡</a>
+      </div>
+    </div>
+
+    <!-- Maths Page -->
+    <div id="maths" class="page" style="display:none">
+      <h2>Maths - Practice Examples</h2>
+      <ul>
+        <li>(a+b)² = a² + 2ab + b²</li>
+        <li>Area of Circle = πr²</li>
+        <li>Pythagoras Theorem: a² + b² = c²</li>
+      </ul>
+      <h3>MCQs:</h3>
+      <div class="mcq">Q1: Value of (x+3)² when x=2?<br>👉 25</div>
+      <div class="btn-group">
+        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
+        <a class="btn" onclick="showPage('english')">Next ➡</a>
+      </div>
+    </div>
+
+    <!-- English Page -->
+    <div id="english" class="page" style="display:none">
+      <h2>English - Literature & Grammar</h2>
+      <ul>
+        <li>Poem: "The Road Not Taken" by Robert Frost.</li>
+        <li>Grammar: Active and Passive Voice.</li>
+        <li>Writing: Formal Letter Writing.</li>
+      </ul>
+      <h3>MCQs:</h3>
+      <div class="mcq">Q1: Who wrote "The Road Not Taken"?<br>👉 Robert Frost</div>
+      <div class="btn-group">
+        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
+        <a class="btn" onclick="showPage('hindi')">Next ➡</a>
+      </div>
+    </div>
+
+    <!-- Hindi Page -->
+    <div id="hindi" class="page" style="display:none">
+      <h2>हिंदी - कक्षा 10</h2>
+      <ul>
+        <li>कविता: "झाँसी की रानी" - सुभद्राकुमारी चौहान</li>
+        <li>गद्यांश: "मानवता" - प्रेमचंद</li>
+        <li>व्याकरण: समास और उपसर्ग</li>
+      </ul>
+      <h3>MCQs:</h3>
+      <div class="mcq">प्र1: "झाँसी की रानी" कविता किसने लिखी?<br>👉 सुभद्राकुमारी चौहान</div>
+      <div class="btn-group">
+        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
+        <a class="btn" onclick="showPage('history')">Next ➡</a> <!-- Loops back to History -->
+      </div>
+    </div>
+
+  </div>
+</body>
+</html>
