--- a/index.html
+++ b/index.html
@@ -5,213 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Class 10 Study Website</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f6f9;
-    }
-    header {
-      background: #2c3e50;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-    nav {
-      background: #34495e;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: white;
-      padding: 14px 20px;
-      text-decoration: none;
-      display: block;
-    }
-    nav a:hover {
-      background: #1abc9c;
-    }
-    .container {
-      padding: 20px;
-    }
-    .subject-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 20px;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: 0.3s;
-      cursor: pointer;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-    .mcq {
-      margin: 15px 0;
-      padding: 10px;
-      background: #ecf0f1;
-      border-radius: 8px;
-    }
-    .btn-group {
-      margin-top: 20px;
-      display: flex;
-      justify-content: space-between;
-    }
-    .btn {
-      padding: 10px 20px;
-      background: #1abc9c;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #16a085;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f6f9; }
+    header { background: #2c3e50; color: white; padding: 15px; text-align: center; }
+    nav { background: #34495e; display: flex; justify-content: center; flex-wrap: wrap; }
+    nav a { color: white; padding: 14px 20px; text-decoration: none; }
+    nav a:hover { background: #1abc9c; }
+    .container { padding: 20px; }
+    .subject-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-top: 20px; }
+    .card { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); text-align: center; cursor: pointer; }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
   </style>
-  <script>
-    function showPage(pageId) {
-      let pages = document.querySelectorAll(".page");
-      pages.forEach(p => p.style.display = "none");
-      document.getElementById(pageId).style.display = "block";
-    }
-  </script>
 </head>
 <body>
 
   <header>
-    <h1>Class 10 Study Website</h1>
-    <p>Notes, MCQs & Sample Papers</p>
+    <h1>Class 10 Study Hub (2025–26 Batch)</h1>
+    <p>Detailed Notes • MCQs • Sample Papers</p>
   </header>
 
   <nav>
-    <a href="#home" onclick="showPage('home')">Home</a>
-    <a href="#history" onclick="showPage('history')">History</a>
-    <a href="#science" onclick="showPage('science')">Science</a>
-    <a href="#maths" onclick="showPage('maths')">Maths</a>
-    <a href="#english" onclick="showPage('english')">English</a>
-    <a href="#hindi" onclick="showPage('hindi')">Hindi</a>
+    <a href="history.html">History</a>
+    <a href="civics.html">Civics</a>
+    <a href="geography.html">Geography</a>
+    <a href="economics.html">Economics</a>
+    <a href="science.html">Science</a>
+    <a href="maths.html">Maths</a>
+    <a href="english.html">English</a>
+    <a href="hindi.html">Hindi</a>
   </nav>
 
   <div class="container">
-    <!-- Home Page -->
-    <div id="home" class="page">
-      <h2>Welcome to Class 10 Study Hub</h2>
-      <p>Select a subject below to view study material:</p>
-      <div class="subject-list">
-        <div class="card" onclick="showPage('history')">
-          <h3>History</h3>
-          <p>Notes & MCQs</p>
-        </div>
-        <div class="card" onclick="showPage('science')">
-          <h3>Science</h3>
-          <p>Formulas & Questions</p>
-        </div>
-        <div class="card" onclick="showPage('maths')">
-          <h3>Maths</h3>
-          <p>Examples & Practice</p>
-        </div>
-        <div class="card" onclick="showPage('english')">
-          <h3>English</h3>
-          <p>Literature & Grammar</p>
-        </div>
-        <div class="card" onclick="showPage('hindi')">
-          <h3>Hindi</h3>
-          <p>कविता & गद्यांश</p>
-        </div>
-      </div>
+    <h2>Welcome to Class 10 Study Website</h2>
+    <p>Select your subject below to view detailed notes:</p>
+    <div class="subject-list">
+      <div class="card" onclick="window.location.href='history.html'"><h3>History</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='civics.html'"><h3>Civics</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='geography.html'"><h3>Geography</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='economics.html'"><h3>Economics</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='science.html'"><h3>Science</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='maths.html'"><h3>Maths</h3><p>All Chapters</p></div>
+      <div class="card" onclick="window.location.href='english.html'"><h3>English</h3><p>Literature + Grammar</p></div>
+      <div class="card" onclick="window.location.href='hindi.html'"><h3>Hindi</h3><p>कविता + गद्यांश</p></div>
     </div>
-
-    <!-- History Page -->
-    <div id="history" class="page" style="display:none">
-      <h2>History - Nationalism in India</h2>
-      <h3>Quick Notes:</h3>
-      <ul>
-        <li>Gandhi launched the Non-Cooperation Movement in 1920.</li>
-        <li>The Salt March began in 1930 from Sabarmati to Dandi.</li>
-        <li>Simon Commission (1927) faced boycott as no Indian member was included.</li>
-      </ul>
-      <h3>MCQs:</h3>
-      <div class="mcq">Q1: Who led the Salt March in 1930?<br>👉 Mahatma Gandhi</div>
-      <div class="btn-group">
-        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
-        <a class="btn" onclick="showPage('science')">Next ➡</a>
-      </div>
-    </div>
-
-    <!-- Science Page -->
-    <div id="science" class="page" style="display:none">
-      <h2>Science - Important Formulas</h2>
-      <ul>
-        <li>Ohm’s Law: V = IR</li>
-        <li>Work = Force × Distance</li>
-        <li>Power = Work / Time</li>
-      </ul>
-      <h3>MCQs:</h3>
-      <div class="mcq">Q1: What is the SI unit of Force?<br>👉 Newton</div>
-      <div class="btn-group">
-        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
-        <a class="btn" onclick="showPage('maths')">Next ➡</a>
-      </div>
-    </div>
-
-    <!-- Maths Page -->
-    <div id="maths" class="page" style="display:none">
-      <h2>Maths - Practice Examples</h2>
-      <ul>
-        <li>(a+b)² = a² + 2ab + b²</li>
-        <li>Area of Circle = πr²</li>
-        <li>Pythagoras Theorem: a² + b² = c²</li>
-      </ul>
-      <h3>MCQs:</h3>
-      <div class="mcq">Q1: Value of (x+3)² when x=2?<br>👉 25</div>
-      <div class="btn-group">
-        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
-        <a class="btn" onclick="showPage('english')">Next ➡</a>
-      </div>
-    </div>
-
-    <!-- English Page -->
-    <div id="english" class="page" style="display:none">
-      <h2>English - Literature & Grammar</h2>
-      <ul>
-        <li>Poem: "The Road Not Taken" by Robert Frost.</li>
-        <li>Grammar: Active and Passive Voice.</li>
-        <li>Writing: Formal Letter Writing.</li>
-      </ul>
-      <h3>MCQs:</h3>
-      <div class="mcq">Q1: Who wrote "The Road Not Taken"?<br>👉 Robert Frost</div>
-      <div class="btn-group">
-        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
-        <a class="btn" onclick="showPage('hindi')">Next ➡</a>
-      </div>
-    </div>
-
-    <!-- Hindi Page -->
-    <div id="hindi" class="page" style="display:none">
-      <h2>हिंदी - कक्षा 10</h2>
-      <ul>
-        <li>कविता: "झाँसी की रानी" - सुभद्राकुमारी चौहान</li>
-        <li>गद्यांश: "मानवता" - प्रेमचंद</li>
-        <li>व्याकरण: समास और उपसर्ग</li>
-      </ul>
-      <h3>MCQs:</h3>
-      <div class="mcq">प्र1: "झाँसी की रानी" कविता किसने लिखी?<br>👉 सुभद्राकुमारी चौहान</div>
-      <div class="btn-group">
-        <a class="btn" onclick="showPage('home')">⬅ Back to Home</a>
-        <a class="btn" onclick="showPage('history')">Next ➡</a> <!-- Loops back to History -->
-      </div>
-    </div>
-
   </div>
+
 </body>
 </html>
