--- a/History.html
+++ b/History.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>History - Class 10</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; background: #fdfdfd; }
+    h1 { text-align: center; color: #2c3e50; }
+    h2 { color: #1abc9c; }
+    .chapter { background: #f4f6f9; padding: 15px; margin: 15px 0; border-left: 5px solid #1abc9c; }
+    .back { display: inline-block; margin-top: 20px; padding: 10px 20px; background: #2c3e50; color: white; border-radius: 5px; text-decoration: none; }
+    .back:hover { background: #1abc9c; }
+  </style>
+</head>
+<body>
+  <h1>History - Class 10 (2025–26 Batch)</h1>
 
+  <div class="chapter">
+    <h2>Chapter 1: The Rise of Nationalism in Europe</h2>
+    <p>👉 Detailed notes about French Revolution, Napoleonic Code, Vienna Congress, Rise of Nation States, Unification of Germany and Italy, etc...</p>
+  </div>
+
+  <div class="chapter">
+    <h2>Chapter 2: Nationalism in India</h2>
+    <p>👉 Notes about Non-Cooperation Movement, Civil Disobedience Movement, Simon Commission, Gandhi-Irwin Pact, Quit India Movement, Independence...</p>
+  </div>
+
+  <div class="chapter">
+    <h2>Chapter 3: The Making of a Global World</h2>
+    <p>👉 Notes about Silk Routes, Industrial Revolution, World War I, Depression, Globalisation after 1950s...</p>
+  </div>
+
+  <div class="chapter">
+    <h2>Chapter 4: The Age of Industrialisation</h2>
+    <p>👉 Notes about Industrial Revolution in England, Handicrafts, Factories, Workers, Impact on India...</p>
+  </div>
+
+  <div class="chapter">
+    <h2>Chapter 5: Print Culture and the Modern World</h2>
+    <p>👉 Notes about Printing Technology, Renaissance, Protestant Reformation, Freedom Struggle in India through Print Media...</p>
+  </div>
+
+  <a href="index.html" class="back">⬅ Back to Home</a>
+</body>
+</html>
