--- a/History.html
+++ b/History.html
@@ -3,44 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>History - Class 10</title>
+  <title>Class 10 History Notes</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #fdfdfd; }
-    h1 { text-align: center; color: #2c3e50; }
-    h2 { color: #1abc9c; }
-    .chapter { background: #f4f6f9; padding: 15px; margin: 15px 0; border-left: 5px solid #1abc9c; }
-    .back { display: inline-block; margin-top: 20px; padding: 10px 20px; background: #2c3e50; color: white; border-radius: 5px; text-decoration: none; }
-    .back:hover { background: #1abc9c; }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      background-color: #f4f4f9;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    h2 {
+      color: #34495e;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
+    .chapter {
+      background: #fff;
+      padding: 15px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    p {
+      text-align: justify;
+    }
+    .back {
+      display: block;
+      margin: 20px auto;
+      text-align: center;
+    }
+    .back a {
+      background: #3498db;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    .back a:hover {
+      background: #2980b9;
+    }
   </style>
 </head>
 <body>
-  <h1>History - Class 10 (2025–26 Batch)</h1>
+  <h1>Class 10 History Notes (2025–26)</h1>
 
   <div class="chapter">
     <h2>Chapter 1: The Rise of Nationalism in Europe</h2>
-    <p>👉 Detailed notes about French Revolution, Napoleonic Code, Vienna Congress, Rise of Nation States, Unification of Germany and Italy, etc...</p>
+    <p>In the 19th century, nationalism emerged as a powerful force in Europe. The French Revolution of 1789 played a key role in spreading the ideas of liberty, equality, and fraternity. Napoleon carried these ideas across Europe, though often through conquest. The Congress of Vienna (1815) tried to restore monarchies, but liberalism and nationalism continued to rise. Romanticism, language, and culture also strengthened national identity. The unification of Germany (1871 under Bismarck) and Italy (1870 under Garibaldi, Mazzini, and Cavour) were key results of nationalist movements.</p>
   </div>
 
   <div class="chapter">
     <h2>Chapter 2: Nationalism in India</h2>
-    <p>👉 Notes about Non-Cooperation Movement, Civil Disobedience Movement, Simon Commission, Gandhi-Irwin Pact, Quit India Movement, Independence...</p>
+    <p>The growth of nationalism in India began in the 20th century with the Swadeshi Movement, Partition of Bengal, and Gandhiji’s leadership. Gandhiji launched the Non-Cooperation Movement (1920), Civil Disobedience Movement (1930), and Quit India Movement (1942). Peasants, tribals, women, and industrial workers actively participated. Symbols like Bharat Mata, the tricolour flag, and hymns like Vande Mataram created a sense of unity. The Salt March (1930) was a turning point in India’s struggle for independence.</p>
   </div>
 
   <div class="chapter">
     <h2>Chapter 3: The Making of a Global World</h2>
-    <p>👉 Notes about Silk Routes, Industrial Revolution, World War I, Depression, Globalisation after 1950s...</p>
+    <p>This chapter explains how the world became interconnected. In the 19th century, trade, migration, and cultural exchange grew. The Silk Route connected Asia with Europe. The Industrial Revolution in Britain expanded global trade. Indentured labourers migrated to different colonies, carrying Indian culture abroad. The Great Depression of the 1930s severely impacted the global economy. After 1945, institutions like IMF and World Bank were formed to stabilize economies. Globalisation has shaped the modern world significantly.</p>
   </div>
 
   <div class="chapter">
     <h2>Chapter 4: The Age of Industrialisation</h2>
-    <p>👉 Notes about Industrial Revolution in England, Handicrafts, Factories, Workers, Impact on India...</p>
+    <p>The Industrial Revolution began in Britain in the 18th century. Factories, machines, and new inventions like the steam engine transformed industries. In India, traditional industries such as textiles flourished, but later declined under British colonial rule due to cheap imports from England. Indian entrepreneurs like Dwarkanath Tagore and Jamsetji Tata tried to industrialise India. Workers initially faced poor conditions but gradually formed unions to demand better wages and rights.</p>
   </div>
 
   <div class="chapter">
     <h2>Chapter 5: Print Culture and the Modern World</h2>
-    <p>👉 Notes about Printing Technology, Renaissance, Protestant Reformation, Freedom Struggle in India through Print Media...</p>
+    <p>The invention of the printing press by Gutenberg in the 15th century revolutionized the spread of knowledge. Books and newspapers spread ideas of the Renaissance, Reformation, and later the French Revolution. In India, print culture supported social reform movements by Raja Rammohan Roy, Ishwar Chandra Vidyasagar, and others. Newspapers like Kesari and Amrita Bazar Patrika created awareness against colonial rule. Print culture played a vital role in spreading nationalism in India.</p>
   </div>
 
-  <a href="index.html" class="back">⬅ Back to Home</a>
+  <div class="back">
+    <a href="index.html">⬅ Back to Home</a>
+  </div>
 </body>
 </html>
