--- a/history.html
+++ b/history.html
@@ -53,7 +53,218 @@
 
   <div class="chapter">
     <h2>Chapter 1: The Rise of Nationalism in Europe</h2>
-    <p>In the 19th century, nationalism emerged as a powerful force in Europe. The French Revolution of 1789 played a key role in spreading the ideas of liberty, equality, and fraternity. Napoleon carried these ideas across Europe, though often through conquest. The Congress of Vienna (1815) tried to restore monarchies, but liberalism and nationalism continued to rise. Romanticism, language, and culture also strengthened national identity. The unification of Germany (1871 under Bismarck) and Italy (1870 under Garibaldi, Mazzini, and Cavour) were key results of nationalist movements.</p>
+    <p>
+
+The French Revolution and the Idea of the Nation
+
+French Revolution of 1789 was the first clear expression of nationalism.
+
+• Steps taken by French Revolutionaries to create a sense of collective identity amongst the French people:
+
+→ Ideas of La patrie and Le citoyen
+
+→ New French Flag
+
+→ Estates General was elected and renamed National Assembly
+
+→ New hymns composed and oaths taken
+
+→ Centralized administration system
+
+→ Internal customs duties and dues were abolished
+
+→ Uniform system of weights and measures were introduced
+
+→ French became the common language
+
+Napolean
+
+• Ruled France from 1799 to 1815.
+
+• Gained absolute powers in 1799 by becoming the First Consul.
+
+Civil Code of 1804 / Napoleonic Code
+
+• Equality before the law was established
+
+• Secured the right to property
+
+• Simplified administrative measures
+
+• Abolished feudal system
+
+• Freed peasants from serfdom and manorial dues
+
+• Guild restrictions were removed
+
+• Transport and communication systems were improved.
+
+Napoleon took away political freedom, increased taxes, imposed censorship and forced people to join French army.
+
+The Making of Nationalism in Europe
+
+No Nation states were in Europe because of not common identity or culture.
+
+• People residing in different areas spoke different languages.
+
+→ Example: Hungary half of the population spoke Magyar other half spoke variety of dialects and in Galicia people spoke Polish.
+
+The Aristocracy and the New Middle Class
+
+• Aristocracy
+
+→ The land owning class.
+
+→ Spoke French connected by ties of marriages.
+
+→ Numerically a small group.
+
+• Peasantry
+
+→ Majority of population
+
+• Middle class
+
+→ New Social class emerged with the growth of towns and emergence of commercial classes.
+
+→ Educated class where ideas of nationality gained popularity.
+
+What did Liberal Nationalism Stand for?
+
+• Liberalism stood for freedom for the individual and equality for all before the law
+
+→ The end of autocracy and clerical privileges
+
+→ A constitution and representative government through parliament.
+
+• In the economic sphere liberalism stood for the freedom of markets and the abolition of state-imposed restrictions on the movement of goods and capital.
+
+• Zollverein abolished tariff barriers, reduced the number of currencies to two, and promoted a network of railways to stimulate mobility.
+
+A New Conservatism after 1815
+
+• Believed that established institutions of state and society should be preserved, with the changes initiated by Napoleon.
+
+Treaty of Vienna (1815)
+
+• Bourbon dynasty was restored to power in France
+
+• A series of states created on the French boundary for preventing French expansion in future.
+
+• German confederation was left untouched.
+
+• Main intentions was to restore the monarchies that had been overthrown by Napoleon.
+
+The Revolutionaries
+
+Acommitment to oppose monarchical forms that had been established after the Vienna Congress, and to fight for liberty and freedom.
+
+Giuseppe Mazzini
+
+• Born in Genoa in 1807
+
+• A member of the secret society of Carbonari
+
+• Founded Young Italy in Marseellies, Young Europe in Berne.
+
+• Believed in the unification of Italy into a republic.
+
+The Age of Revolutions: 1830-1848
+
+• In July 1830, Bourbon kings of France were overthrown and a constitutional monarchy was established.
+
+• Belgium broke away from the United kingdoms of the Netherlands.
+
+• Greece which had been a part of the Ottomon Empire since the fifteenth century, struggled for independence.
+
+→ Treaty of Constantinople of 1832 recognised Greece as an independent nation.
+The Romantic Imagination and National Feeling
+
+• A cultural movement which sought to develop a particular form of nationalist sentiment, criticized the glorification of reason and science and focused instead on emotions, intuition and mystical feelings.
+
+• German philosopher Johann Gottfried Herder tried to discovered culture among common people, through folk songs, folk poetry and folk dances.
+
+Hunger, Hardship and Popular Revolt
+
+• In most countries there were more seekers of jobs than employment.
+
+• Population from rural areas migrated to the cities to live in overcrowded slums.
+
+• The rise of food prices or a year of bad harvest led to widespread pauperism in town and country.
+
+• In 1848, the Population of Paris came out on the roads and Louis Philippe was forced to flee and National Assembly proclaimed a Republic.
+
+• In 1845, weavers in Silesia led a revolt against contractors.
+
+1848: The Revolution of the Liberals
+
+• The revolution was led by educated middle classes who combined their demands for constitutionalism with national unification.
+
+Frankfurt Parliament
+
+• On 18 May 1848, members of political association’s elected 831 representatives who took their places in the Frankfurt Parliament convened in the Church of St. Paul and drafted a Constitution for the German nation.
+
+• It was opposed by King of Prussia and also lost its social basis as no rights were given to workers and women.
+
+• It forced the autocratic monarchs to introduce some changes – serfdom and bonded labour was abolished
+
+• Hungarians were granted more autonomy.
+
+The Making of Germany and Italy
+
+Germany
+
+• Otto Van Bismarck with the help of Prussian army and bureaucracy took on the leadership of the movement for national unification.
+
+• Three war over seven years ended in Prussian victory and completed the process of unification.
+
+• Kaiser William I of Prussia headed the new German Empire.
+
+Italy
+
+• Italy was divided into seven states of which only Sardinia Piedmont was ruled by an Italian Princely state.
+
+• Initially a unification programme was initiated by Giuseppe Mazzini, but it failed.
+
+• Chief Miniser Cavour led the movement, with the help of Giuseppe Garibaldi.
+
+• In 1861, Victor Emmanuel II was proclaimed king of united Italy.
+
+The Strange Case of Britain
+
+• In 1688, England established as a nation state.
+
+• English parliament seized power from the monarchy.
+
+• The Act of Union 1707 resulted in the formation of the ‘United Kingdom of Great Britain’.
+
+• In 1801, Ireland was forcibly taken by the British after the failed revolution.
+
+• A new ‘British Nation’ was founded through the propagation of a dominant English culture.
+
+Visualising the Nation
+
+• Nations were portrayed as female figure (Allegory).
+
+• The female form that was chosen to personify the nation did not stand for any particular woman in real life, rather it sought to give the abstract idea of the nation a concrete form.
+
+• In France the allegory was christened as Marianne, in Germany – Germania became the allegory.
+
+Nationalism and Imperialism
+
+• The Balkans comprised modern-day Romania, Bulgaria, Albania, Greece, Macedonia, Croatia, Bosnia-Herzegovina, Slovenia, Serbia and Montenegro.
+
+• Balkans was a region of geographical and ethnic variation was under the control of the Ottomon Empire.
+
+• The idea of Romantic nationalism made this region very explosive.
+
+• The Balkan states were fiercely jealous of each other and each hoped to gain more territory at the expense of each other.
+
+• European powers were also looking for the extend their control over the area.
+
+• This led to a series of wars in the region and finally resulted in the First World War.
+
+.</p>
   </div>
 
   <div class="chapter">
