--- a/history.html
+++ b/history.html
@@ -53,9 +53,7 @@
 
   <div class="chapter">
     <h2>Chapter 1: The Rise of Nationalism in Europe</h2>
-    <p>
-
-The French Revolution and the Idea of the Nation
+    <p>The French Revolution and the Idea of the Nation
 
 French Revolution of 1789 was the first clear expression of nationalism.
 
@@ -262,9 +260,7 @@ Nationalism and Imperialism
 
 • European powers were also looking for the extend their control over the area.
 
-• This led to a series of wars in the region and finally resulted in the First World War.
-
-.</p>
+• This led to a series of wars in the region and finally resulted in the First World War.</p>
   </div>
 
   <div class="chapter">
